# UK-AI-Hack

./: .env.example  Dockerfile  HACKATHON_GUIDE.md  INTEGRATION_GUIDE.md  README.md  package-lock.json  package.json  start-all.sh  test_dynamic_agents.py  tsconfig.json  vercel.json
ai-service/: .env.example  main.py  pyproject.toml  requirements.txt  setup.sh  simple_demo_server.py  simple_server.py  test_demo.py  test_integration.py
ai-service/services/: ai_matcher.py  aml_detector.py  automated_sla.py  compliance_engine.py  defi_risk_analyzer.py  github_analyzer.py  multi_agent_system.py  protocol_auditor.py  realtime_dashboard.py  regulatory_monitor.py  sentiment_analyzer.py  smart_matching.py  transaction_analyzer.py
contracts/: .env.example  CIRCLE_DEPLOYMENT.md  README.md  deploy.sh  deployment-circleTestnet-1755088571777.json  hardhat.config.js  package-lock.json  package.json
contracts/cache/: console-history.txt  solidity-files-cache.json
contracts/contracts/: InstitutionalTreasury.sol  RegulatoryOracle.sol  SLAEnforcement.sol  TalentMatching.sol  TalentReputationScore.sol  TransactionMonitor.sol
contracts/scripts/: deploy-circle.js  deploy.js  setup-circle.js  setup.js  test-connection.js  (+1 more)
docs/: WORKFLOW_PROTOCOL.md
frontend/: demo-data.md  package-lock.json  package.json  start-dev.sh  vercel.json
prisma/: schema.prisma
scripts/: setup.sh
src/: compliance-server.ts  index.d.ts.map  index.js  index.js.map  index.ts  server.d.ts.map  server.js  server.js.map  server.ts
tests/: helpers.test.js  helpers.test.js.map  helpers.test.ts
(+231 files in other folders)
